@@ -65,6 +65,7 @@ depth: 1
  * Migrate slug field behaviour to a Stimulus controller and create new `SlugInput` widget (Loveth Omokaro)
  * Refactor `status` HTML usage to shared template tag (Aman Pandey, LB (Ben) Johnston)
  * Add curlylint and update djhtml, semgrep versions in pre-commit config (Himanshu Garg)
+ * Use shared header template for `ModelAdmin` header (Aman Pandey)
 
 ## Upgrade considerations
 
@@ -94,6 +95,16 @@ The following features deprecated in Wagtail 4.0 have been fully removed. See [W
 ### `Page.get_static_site_paths` method removed
 
 The undocumented `Page.get_static_site_paths` method (which returns a generator of URL paths for use by static site generator packages) has been removed. Packages relying on this functionality should provide their own fallback implementation.
+
+### Changes to header CSS classes in `ModelAdmin` templates
+
+If there are custom styles in place for the `ModelAdmin`'s header content or more complex [template overrides](modeladmin_overriding_templates) in us, there are a few changes for the following classes to be aware of.
+
+| **Content**                      | **Old classes**       | **New classes** |
+| -------------------------------- | --------------------- | --------------- |
+| Heading & search (contains `h1`) | `.left.header-left`   | `.left`         |
+| Action buttons (`header_extra`)  | `.right.header-right` | `.right`        |
+
 
 ### Slug field widget required for auto-formatting
 
