@@ -17,45 +17,38 @@
 
 {% block content %}
     {% block header %}
-        <header class="w-header w-header--hasform">
-            {% block breadcrumb %}{% endblock %}
-            <div class="row">
-                <div class="left header-left">
-                    <div class="col">
-                        {% block h1 %}
-                            <h1 class="w-header__title">
-                                {% if view.header_icon %}{% icon classname="w-header__glyph" name=view.header_icon %}{% endif %}
-                                {{ view.get_page_title }}
-                                {% if view.get_page_subtitle %} <span class="w-header__subtitle">{{ view.get_page_subtitle }}</span> {% endif %}
-                                {% include 'modeladmin/includes/result_count.html' %}
-                            </h1>
-                        {% endblock %}
-                    </div>
-                    {% block search %}{% search_form %}{% endblock %}
-                </div>
-                {% block header_extra %}
-                    <div class="right header-right">
-                        {% if view.list_export or user_can_create %}
-                            <div class="actionbutton">
-                                {% if user_can_create %}
-                                    {% include 'modeladmin/includes/button.html' with button=view.button_helper.add_button %}
-                                {% endif %}
-                                {% if view.list_export %}
-                                    <div class="dropdown dropdown-button match-width col">
-                                        <a href="?export=xlsx&{{ request.GET.urlencode }}" class="button bicolor button--icon">{% icon name="download" wrapped=1 %}{% trans 'Download XLSX' %}</a>
-                                        <div class="dropdown-toggle">{% icon name="arrow-down" %}</div>
-                                        <ul>
-                                            <li><a  class="button bicolor button--icon" href="?export=csv&{{ request.GET.urlencode }}">{% icon name="download" wrapped=1 %}{% trans 'Download CSV' %}</a></li>
-                                        </ul>
-                                    </div>
-                                {% endif %}
+        {% fragment as breadcrumb %}{% block breadcrumb %}{% endblock %}{% endfragment %}
+        {% fragment as heading %}{% block h1 %}{% endblock %}{% endfragment %}
+        {% fragment as description %}{% include 'modeladmin/includes/result_count.html' %}{% endfragment %}
+        {% fragment as extra_actions %}
+            {% block header_extra %}
+                {% if view.list_export or user_can_create %}
+                    <div class="actionbutton">
+                        {% if user_can_create %}
+                            {% include 'modeladmin/includes/button.html' with button=view.button_helper.add_button %}
+                        {% endif %}
+                        {% if view.list_export %}
+                            <div class="dropdown dropdown-button match-width col">
+                                <a href="?export=xlsx&{{ request.GET.urlencode }}" class="button bicolor button--icon">
+                                    {% icon name="download" wrapped=1 %}{% trans 'Download XLSX' %}
+                                </a>
+                                <div class="dropdown-toggle">{% icon name="arrow-down" %}</div>
+                                <ul>
+                                    <li>
+                                        <a class="button bicolor button--icon" href="?export=csv&{{ request.GET.urlencode }}">{% icon name="download" wrapped=1 %}
+                                            {% trans 'Download CSV' %}
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         {% endif %}
                     </div>
-                {% endblock %}
-            </div>
-            {% block extra_rows %}{% endblock %}
-        </header>
+                {% endif %}
+            {% endblock %}
+        {% endfragment %}
+        {% fragment as search %}{% block search %}{% search_form %}{% endblock %}{% endfragment %}
+        {% fragment as extra_rows %}{% block extra_rows %}{% endblock %}{% endfragment %}
+        {% include 'wagtailadmin/shared/header.html' with classname="w-header--hasform" breadcrumb=breadcrumb heading=heading title=view.get_page_title subtitle=view.get_page_subtitle icon=view.header_icon description=description search=search extra_actions=extra_actions extra_rows=extra_rows %}
     {% endblock %}
 
     {% block content_main %}
